[package]
name = "pestilence"
version = "0.1.0"
edition = "2021"
authors = ["giraffekey <giraffekey@tutanota.com>"]

[dependencies]
bevy = { version = "0.13.0" }
rand = "0.8"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.bevy]
version = "0.13.0"
features = ["dynamic_linking"]
